{
    "name": "LaserControls",
    "maps": [
        {
            "name": "Laser",
            "id": "f2b7ed8f-9e1f-4dc4-93cf-47bda9024f0b",
            "actions": [
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "bad951c6-3ed4-4194-84a6-d2556638d4ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "51b20bb6-f353-41ef-978e-06cc89c36817",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "302707a4-7cdf-4b68-9b2e-411849c7f90c",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c95c316-7618-4de2-a769-7abfbc6a8c9e",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}